src/main/java/lexical/test/passing/stringsWithEscapes.ru
/? CORRECTO: ANALISIS LEXICO
/? | TOKEN | LEXEMA | NUMERO DE LINEA (NUMERO DE COLUMNA) |
/? | STRING_LITERAL | aa	i
/?  | 1 (1) |
"\v\a\a\v\t\i\n"