src/main/java/lexical/test/failing/10.ru
"ho\t\tl

/? ERROR: LEXICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 1 | 9 | Cadena no cerrada: ho		l |